redesigning base layout, removing last vestiges of guarantee css template

--- a/vcweb/core/templates/about.html
+++ b/vcweb/core/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %}Virtual Commons Web Experiment{% endblock %}
 
 {% block page %}
-<div id='post'>
+<div>
 	<h2 class='title'>About Us</h2>
 	<div class='entry'>
 	We develop real-time dynamic experiments to help us analyze and understand issues related 
