--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block page%}
-    <div id='post'>
-        <h2 class='title'>Welcome</h2>
-        <div class='entry'>
+    <div>
+        <h2>Welcome</h2>
+        <div>
             Welcome to the Virtual Commons Web Environment, an open software initiative hosted at
             <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
             We develop real-time dynamic experiments to help us analyze and understand issues related 
@@ -17,18 +17,18 @@
             in increasing our understanding of how humans organize themselves in cooperative arrangements to govern 
             common resources. 
         </div>
-        <h2 class='title'>Current development</h2>
+        <h2>Current development</h2>
         <div class='alert alert-error alertIcon'>
             This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website might
                 not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
         </div>
-        <div class='entry'>
+        <div>
             You can find up-to-date development news and our <a class='external' 
                 href='https://bitbucket.org/virtualcommons/vcweb/issues?status=new&status=open'>issue tracker</a> 
             at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
         </div>
-        <h2 class='title'>Acknowledgements</h2>
-        <div class='entry'>
+        <h2>Acknowledgements</h2>
+        <div>
             The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
             (BCS 0625354 and SES 0748632) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
             and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
