--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -26,8 +26,10 @@
 <div class='navbar navbar-fixed-top'>
     <div class='navbar-inner'>
         <div class='container'>
+            {% block headernav %}
             <ul class='nav'>
                 {% block headerlinks %}
+                <li><a class='brand'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='40' height='30' alt='vcweb logo'/>virtual commons</a></li>
                 <li class='{% active request home %}' ><a href='{{ home }}' class='first'><i class='icon-home'></i> Home</a></li>
                 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-th-large'></i> Dashboard</a></li>
                 <li class='{% active request contact %}'><a href='{{ contact }}'><i class='icon-bell'></i> Contact us</a></li>
@@ -51,21 +53,8 @@
                 {% endif %}
                 {% endblock %}
             </ul>
+            {% endblock headernav %}
         </div>
-    </div>
-</div>
-{% endblock %}
-<br>
-<div id='logo'>
-{% block logo %}
-<div class='row-fluid'>
-    <div class='span3'>
-        <img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='120' height='90' alt='vcweb logo'/>
-    </div>
-    <div class='span9'>
-        <h1>
-            the virtual commons web environment
-        </h1>
     </div>
 </div>
 {% endblock %}
