--- a/vcweb/forestry/templates/forestry/practice.html
+++ b/vcweb/forestry/templates/forestry/practice.html
@@ -3,8 +3,8 @@
 {% block title %} Forestry Practice Round{% endblock %}
 
 {% block page %}
-<div class='info infoIcon'>
-    This is a <b>practice round</b>.  Your decisions in this round will not affect your total earnings.
+<div class='alert alert-message'>
+    <i class='icon-info-sign'></i> This is a <b>practice round</b>.  Your decisions in this round will not affect your total earnings.
 </div>
 {{block.super}}
 {% endblock page %}
