--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,12 +1,11 @@
 {% extends "participant/base.html" %}
-{% block headernav %}
+{% block headerlinks %}
 <ul class='nav nav-tabs' id='lfp-navtabs'>
     <li><a class='brand' href=''>lighterfootprints</a></li>
     <li><a href='#dashboard' data-toggle='tab'>Dashboard</a></li>
     <li><a href='#all-activities' data-toggle='tab'>Challenges</a></li>
     <li><a href='#group-wall' data-toggle='tab'>My Team</a></li>
     <li><a href='#faq' data-toggle='tab'>Help</a></li>
-    <li class='pull-right'><a href='{{ logout }}'>Logout ({{request.user.email}})</a></li>
 </ul>
 {% endblock %}
 {% block logo %}
