adding fontawesome 3.0.2 (http://fortawesome.github.com/Font-Awesome/)

--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 50px;
+    padding-top: 50px;
 }
 a.external {
     background: url(../images/external.png) center right no-repeat;
