--- a/vcweb/core/templates/account/login.html
+++ b/vcweb/core/templates/account/login.html
@@ -11,8 +11,8 @@
     If you've forgotten your password, you can <a href='{% url password-reset %}'>request a new one</a>.
     </p>
     {% include "includes/bootstrap-form.html" %}
-    <div class='form-actions'>
-        <button type='submit' class='btn btn-primary'>Login</button>
+    <div class='controls'>
+        <button type='submit' class='btn btn-primary'><i class='icon-user'></i> Login</button>
     </div>
     {% comment %}
     FIXME: disabling social auth until its more thoroughly debugged (and we know what social platforms we want to
