--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -9,7 +9,6 @@
 {% url 'core:register' as register %}
 {% url 'core:profile' as profile %}
 {% url 'core:dashboard' as dashboard %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,8 +16,8 @@
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
-<!--[if lt IE 8]><link rel="stylesheet" href="{{STATIC_URL}}media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
-<link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css" media="screen" />
+<link rel='stylesheet' href='{{STATIC_URL}}bootstrap/css/font-awesome.min.css'>
+<link rel="stylesheet" href="{{STATIC_URL}}css/style.css" media="screen" />
 {% endblock %}
 </head>
 <body>
@@ -29,15 +28,15 @@
             {% block headernav %}
             {% block headerlinks %}
             <ul class='nav'>
-                <li><a class='brand {% active request home %}' href='{{ home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='27' height='20' alt='vcweb logo'/>virtual commons</a></li>
-                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-th-large'></i> Dashboard</a></li>
+                <li><a class='brand {% active request home %}' href='{{ home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a></li>
+                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-dashboard'></i> Dashboard</a></li>
                 <li class='{% active request contact %}'><a href='{{ contact }}'><i class='icon-bell'></i> Contact us</a></li>
-                <li><a target='_blank' href='https://bitbucket.org/virtualcommons/vcweb/issues'><i class='icon-bullhorn'></i> Report a Bug</a></li>
+                <li><a target='_blank' href='https://bitbucket.org/virtualcommons/vcweb/issues/new'><i class='icon-bullhorn'></i> Report a Bug</a></li>
                 {% if "participate" in request.path or "wait" in request.path %}
-                <li class='{% active_re request "participate" %} {% active_re request "wait" %}'><a href='#'>Participate</a></li>
+                <li class='{% active_re request "participate" %} {% active_re request "wait" %}'><a name='participate'><i class='icon-group'></i>Participate</a></li>
                 {% endif %}
                 {% if "experiment" in request.path %}
-                <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
+                <li class='{% active_re request "experiment" %}'><a name='experiment'><i class='icon-beaker'></i> Experiment</a></li>
                 {% endif %}
             </ul>
             {% endblock %}
@@ -53,10 +52,11 @@
                 {% else %}
                 <li class='{% active request login %}'>
                     {% if debug_mode %}
-                    <a href='{{ login }}'>Sign In</a>
+                    <a href='{{ login }}'>
                     {% else %}
-                    <a href='https://{{request.get_host}}{{ login }}'>Sign In</a>
+                    <a href='https://{{request.get_host}}{{ login }}'>
                     {% endif %}
+                    <i class='icon-cog'></i> Sign In</a>
                 </li>
                 {% endif %}
             </ul>
