--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 50px;
+    background-color: #F9F9F9;
 }
 a.external {
     background: url(../images/external.png) center right no-repeat;
@@ -11,20 +12,26 @@ h1, h2, h3 {
 h2, h3 {
     border-bottom:1px solid #333;
 }
-/*
-h1 { font-size: 1.8em; }
-h2 { font-size: 1.4em; }
+h2 { font-size: 1.5em; }
 h3 { font-size: 1.2em; }
 h4 { font-size: 1.0em; }
 h5 { font-size: 0.9em; }
-*/
+.dashboard-header {
+    font-size: 2em;
+}
+.bold {
+    font-weight: bolder;
+}
+.alert-white {
+    background: #FFFFFF;
+    border: 1px solid #FFFFFC;
+    color: gray;
+}
 label.error {
-    background: url('../images/unchecked.gif') no-repeat left center #FBE3E4;
-    font-size: .8em;
-    margin:0.3em;
-    padding:0.3em;
-    padding-left: 1.1em;
-    margin-left: 0.3em;
+    background: #FBE3E4;
+    font-size: .9em;
+    margin: 0.4em;
+    padding: 0.4em;
 }
 .chat {
     height: 20em;
@@ -37,7 +44,6 @@ label.error {
 .chat-message {
     margin-bottom: 5px;
 }
-/* footer css from guarantee */
 #footer {
     width: 100%;
     height: 100px;
