--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -68,12 +68,12 @@
             </div>
         </div>
         <div class='tab-pane' id='dashboard'>
-            <div class='muted dashboard-header'><i class='icon-dashboard'></i> Team Dashboard</div>
+            <h1 class='dashboard-header muted'><i class='icon-dashboard'></i> Team Dashboard</h1>
             <!-- FIXME: re-enable this at some point -->
             <div data-bind='if: firstVisit()'>
             </div>
             <div class='alert alert-block alert-white'>
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <button type="button" class="close" data-dismiss="alert"><i class='icon-remove-sign'></i></button>
                 <h2 class='muted'>Welcome to Lighter Footprints, <i class='text-info'>Team <span data-bind='text: groupNumber'></span>!</i></h2>
                 <p>
                     You have been randomly placed in a group of {{ participant_group_relationship.group.size }}
