--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
 <link rel='stylesheet' href='{{STATIC_URL}}bootstrap/css/font-awesome.min.css'>
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" media="screen" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 {% endblock %}
 </head>
 <body>
@@ -86,11 +87,11 @@
 
     {% block page %}
     <div class='row'>
-        <div class='span8'>
+        <div class='span9'>
             {% block content %}
             {% endblock %}
         </div>
-        <div class='span4'>
+        <div class='span3'>
             {% block sidebar %}
             {% endblock %}
         </div>
