--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -1,6 +1,6 @@
 body {
+    font-family: 'Open Sans', sans-serif; 
     padding-top: 50px;
-    background-color: #F9F9F9;
 }
 a.external {
     background: url(../images/external.png) center right no-repeat;
@@ -72,4 +72,22 @@ label.error {
 #experiment-messages {
     height: 230px;
     overflow: auto;
+}
+div.lighterprints-dashboard h1,h2,h3,h4 {
+    text-transform: uppercase;
+    color: #222;
+    border: none;
+    font-weight: normal;
+}
+div.lighterprints-dashboard h1 {
+    color: #A9A9A9;
+    font-size: 4.2em;
+}
+div.lighterprints-dashboard h2 {
+    color: #A9A9A9;
+    font-size: 3.7em;
+}
+.left-divider {
+    padding-left: 1.1em;
+    border-left: 1px solid #A9A9A9;
 }
