--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,7 +1,11 @@
 {% extends "participant/base.html" %}
+{% block head %}
+{{ block.super }}
+<link rel="stylesheet" href="//fast.fonts.com/cssapi/e86344be-530a-495b-be28-7a22a9cda219.css"/>
+{% endblock %}
 {% block headerlinks %}
 <ul class='nav nav-tabs' id='lfp-navtabs'>
-    <li><a class='brand' href=''>lighterfootprints</a></li>
+    <li><a class='brand'><img src='{{STATIC_URL}}/images/lighterprints/logo.png' width=30 height=30> lighter<strong class='lighterprints-green'>footprints</strong></a></li>
     <li><a href='#dashboard' data-toggle='tab'><i class='icon-dashboard'></i> Dashboard</a></li>
     <li><a href='#all-activities' data-toggle='tab'><i class='icon-star-empty'></i> Challenges</a></li>
     <li><a href='#group-wall' data-toggle='tab'><i class='icon-comments-alt'></i> My Team</a></li>
@@ -74,14 +78,14 @@
             </div>
             <div class='alert alert-block alert-white'>
                 <button type="button" class="close" data-dismiss="alert"><i class='icon-remove-sign'></i></button>
-                <h2 class='muted'>Welcome to Lighter Footprints, <i class='text-info' data-bind='text: groupName'></i>!</h2>
+                <h2 class='muted'>Welcome to Lighter Footprints, <i class='lighterprints-blue'><span data-bind='text: groupName'></span>!</i></h2>
                 <p>
                     You have been randomly placed in a group of {{ participant_group_relationship.group.size }}
                     participants. In this experiment you can perform virtual actions that represent green alternatives
                     to some common daily activities.
                 </p>
                 <p>
-                    <i class='text-success icon-leaf'></i> Earn <span class='label label-success'>green points</span> by
+                    <i class='lighterprints-green icon-leaf'></i> Earn <span style='background-color: #66CC00; color: #FFFFFF;' class='label'>green points</span> by
                     completing challenges.  Rank up by <b>increasing your team's average score.</b>.
                 </p>
                 <p>
@@ -93,23 +97,23 @@
                     isn't high enough to rank up, you must start over.
                 </p>
             </div>
-            <div class='row lighterprints-dashboard'>
+            <div class='row lighterprints-scoreboard'>
                 <div class='span2'>
-                    <h3>Today's Score</h3>
-                    <h1><span data-bind='text: averagePoints'></span> <i style='color: green;' class='icon-leaf'></i></h1>
+                    <h5>Today's Score</h5>
+                    <h1><span data-bind='text: averagePoints'></span> <i class='lighterprints-green icon-leaf'></i></h1>
                 </div>
                 <div class='span2 left-divider'>
-                    <h3>Current Level</h3>
+                    <h5>Current Level</h5>
                     <h1><span data-bind='text: groupLevel'></span></h1>
                     <br>
                 </div>
                 <div class='span2 left-divider'>
-                    <h3>Today's Progress</h3>
-                    <h2><span data-bind='text: averagePoints'></span>/<span data-bind='text:pointsToNextLevel'></span></h2>
+                    <h5>Today's Progress</h5>
+                    <h1><span data-bind='text: averagePoints'></span>/<span data-bind='text:pointsToNextLevel'></span></h1>
                     <br>
                 </div>
                 <div class='span2 left-divider'>
-                    <h3>Time Remaining</h3>
+                    <h5>Time Remaining</h5>
                     <h1>7:53</h1>
                     <br>
                 </div>
@@ -263,6 +267,7 @@
 {% endblock sidebar %}
 {% block javascript %}
 {{ block.super }}
+<script src="//fast.fonts.com/jsapi/e86344be-530a-495b-be28-7a22a9cda219.js"></script>
 <script type='text/javascript' src='{{STATIC_URL}}js/lighterprints/model.js'></script>
 <script type='text/javascript'>
 $(function() {
