--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,6 +1,7 @@
 {% extends "participant/base.html" %}
 {% block head %}
 {{ block.super }}
+<link rel='stylesheet' href='{{STATIC_URL}}/css/lighterprints/style.css'/>
 <link rel="stylesheet" href="//fast.fonts.com/cssapi/e86344be-530a-495b-be28-7a22a9cda219.css"/>
 {% endblock %}
 {% block headerlinks %}
@@ -73,9 +74,9 @@
         </div>
         <div class='tab-pane' id='dashboard'>
             <h1 class='dashboard-header muted'><i class='icon-dashboard'></i> Team Dashboard</h1>
-            <!-- FIXME: re-enable this at some point -->
+            <!-- FIXME: re-enable this at some point
             <div data-bind='if: firstVisit()'>
-            </div>
+            -->
             <div class='alert alert-block alert-white'>
                 <button type="button" class="close" data-dismiss="alert"><i class='icon-remove-sign'></i></button>
                 <h2 class='muted'>Welcome to Lighter Footprints, <i class='lighterprints-blue'><span data-bind='text: groupName'></span>!</i></h2>
@@ -97,10 +98,19 @@
                     isn't high enough to rank up, you must start over.
                 </p>
             </div>
+            <!-- FIXME: disabled conditional alert 
+            </div>
+            -->
+            
             <div class='row lighterprints-scoreboard'>
                 <div class='span2'>
                     <h5>Today's Score</h5>
-                    <h1><span data-bind='text: averagePoints'></span> <i class='lighterprints-green icon-leaf'></i></h1>
+                    <table>
+                        <tr>
+                            <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: averagePoints'></span></td>
+                            <td><i class='lighterprints-green icon-leaf icon-2x'></i></td>
+                        </tr>
+                    </table>
                 </div>
                 <div class='span2 left-divider'>
                     <h5>Current Level</h5>
@@ -109,7 +119,7 @@
                 </div>
                 <div class='span2 left-divider'>
                     <h5>Today's Progress</h5>
-                    <h1><span data-bind='text: averagePoints'></span>/<span data-bind='text:pointsToNextLevel'></span></h1>
+                    <h1><span data-bind='text: averagePoints'></span> / <span data-bind='text:pointsToNextLevel'></span></h1>
                     <br>
                 </div>
                 <div class='span2 left-divider'>
@@ -121,8 +131,8 @@
             <h3>Challenges</h3>
             <div class='tabbable'>
                 <ul class='nav nav-tabs'>
-                    <li class='active'><a href='#unlocked-challenges' data-toggle='tab'>Unlocked</a></li>
-                    <li><a href='#locked-challenges' data-toggle='tab'>Locked</a></li>
+                    <li class='active'><a href='#unlocked-challenges' data-toggle='tab'><i class='icon-star text-warning'></i> Unlocked</a></li>
+                    <li><a href='#locked-challenges' data-toggle='tab'><i class='icon-lock'></i> Locked</a></li>
                 </ul>
                 <div class='tab-content'>
                     <div class='tab-pane active' id='unlocked-challenges'>
@@ -345,7 +355,7 @@ $(function() {
 <div data-bind='foreach: challenges'>
 <div class='row'>
     <div class='span2'>
-        <img data-bind='attr: {src: icon_url}'>
+        <img data-bind='attr: {src: "{{STATIC_URL}}/images/lighterprints/badges/" + name() + ".png" }'>
     </div>
     <div class='span5'>
         <h3 data-bind='text:display_name'></h3>
